--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-body {
 h2{
   color:#72788D;
   text-decoration: underline wavy 3px;
@@ -16,5 +15,26 @@ img:hover {
   border: 2px solid #C9D7F8;
   border-radius: 6px;
   padding: 5px;
-  width: 150px;
+  width: 150px;}
+
+nav {
+ list-style-type: none;
+ width:100%;
+ background-color:#75ABBC;
+ position:fixed;
+  top: 0;
+  left: 0;
 }
+
+li a{
+  color:white;
+  text-decoration:none;
+  display: block;
+  padding: 15px 100px;
+  float:left;
+}
+li a:hover{
+  background-color: salmon;
+
+}
+
