--- a/style.css
+++ b/style.css
@@ -1,21 +1,25 @@
 h2{
-  color:#72788D;
+  color:#75ABBC;
   text-decoration: underline wavy 3px;
   word-spacing: 10px;
 text-shadow: 3px;
  text-transform: uppercase;
+  
 }
 
 
 body{
   background-color:#2F4858
 }
-
+img {
+  width: 50%;
+  height: 25%;
+}
 img:hover {
   border: 2px solid #C9D7F8;
   border-radius: 6px;
-  padding: 5px;
-  width: 150px;}
+  padding: 150px;
+  width: 350px;}
 
 nav {
  list-style-type: none;
@@ -37,4 +41,5 @@ li a:hover{
   background-color: salmon;
 
 }
+
 
